# django_tutorial

./: .env  .gitignore  Dockerfile  Pipfile  README.md  compose.yaml  db.sqlite3  docker-entrypoint.sh  pyproject.toml  requirement.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: labeler.yml
apidemo/: health_check.py  models.py  serializers.py  urls.py  views.py
apidemo/migrations/: 0001_initial.py
nginx/: Dockerfile  nginx.conf
test_project/: settings.py  urls.py
