[project]
name = "django-rest-framework"
version = "0.1.0"
description = "A Django REST framework for building APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "asgiref==3.9.1 ; python_full_version >= '3.9'",
    "attrs==25.3.0",
    "attrs==25.3.0 ; python_full_version >= '3.8'",
    "django==5.2.5",
    "django==5.2.5 ; python_full_version >= '3.10'",
    "djangorestframework==3.16.1",
    "djangorestframework==3.16.1 ; python_full_version >= '3.9'",
    "drf-spectacular==0.28.0",
    "drf-spectacular==0.28.0 ; python_full_version >= '3.7'",
    "drf-spectacular-sidecar==2025.9.1",
    "drf-spectacular-sidecar==2025.9.1 ; python_full_version >= '3.6'",
    "faker==37.6.0",
    "faker==37.6.0 ; python_full_version >= '3.9'",
    "gunicorn==23.0.0",
    "gunicorn==23.0.0 ; python_full_version >= '3.7'",
    "inflection==0.5.1",
    "inflection==0.5.1 ; python_full_version >= '3.5'",
    "jsonschema==4.25.1",
    "jsonschema==4.25.1 ; python_full_version >= '3.9'",
    "jsonschema-specifications==2025.4.1",
    "jsonschema-specifications==2025.4.1 ; python_full_version >= '3.9'",
    "packaging==25.0",
    "packaging==25.0 ; python_full_version >= '3.8'",
    "python-dateutil==2.9.0.post0",
    "python-dateutil==2.9.0.post0 ; python_full_version >= '2.7'",
    "python-dotenv==1.1.1",
    "python-dotenv==1.1.1 ; python_full_version >= '3.9'",
    "pyyaml==6.0.2",
    "pyyaml==6.0.2 ; python_full_version >= '3.8'",
    "referencing==0.36.2",
    "referencing==0.36.2 ; python_full_version >= '3.9'",
    "rpds-py==0.27.0",
    "rpds-py==0.27.0 ; python_full_version >= '3.9'",
    "six==1.17.0",
    "six==1.17.0 ; python_full_version >= '2.7'",
    "sqlparse==0.5.3",
    "sqlparse==0.5.3 ; python_full_version >= '3.8'",
    "typing-extensions==4.15.0",
    "typing-extensions==4.15.0 ; python_full_version >= '3.9'",
    "tzdata==2025.2",
    "tzdata==2025.2 ; python_full_version >= '2'",
    "uritemplate==4.2.0",
    "uritemplate==4.2.0 ; python_full_version >= '3.9'",
]
