[project]
name = "django-rest-framework"
version = "0.1.0"
description = "A Django REST framework for building APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "asgiref==3.9.1",
   "attrs==25.3.0",
   "django==5.2.6",
   "djangorestframework==3.16.1",
   "drf-spectacular==0.28.0",
   "drf-spectacular-sidecar==2025.9.1",
   "faker==37.8.0",
   "gunicorn==23.0.0",
   "inflection==0.5.1",
   "jsonschema==4.25.1",
   "jsonschema-specifications==2025.9.1",
   "packaging==25.0",
   "python-dateutil==2.9.0.post0",
   "python-dotenv==1.1.1",
   "pyyaml==6.0.2",
   "referencing==0.36.2",
   "rpds-py==0.27.1",
   "six==1.17.0",
   "sqlparse==0.5.3",
   "typing-extensions==4.15.0",
   "tzdata==2025.2",
   "uritemplate==4.2.0",
]

[tool.uv]
link-mode = "copy"
upgrade = true
