[project]
name = "django-rest-framework"
version = "0.1.0"
description = "A Django REST framework for building APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "asgiref",
   "attrs",
   "django",
   "djangorestframework",
   "drf-spectacular",
   "drf-spectacular-sidecar",
   "faker",
   "gunicorn",
   "inflection",
   "jsonschema",
   "jsonschema-specifications",
   "packaging",
   "python-dateutil",
   "python-dotenv",
   "pyyaml",
   "referencing",
   "rpds-py",
   "six",
   "sqlparse",
   "typing-extensions",
   "tzdata",
   "uritemplate",
]

[tool.uv]
link-mode = "copy"
upgrade = true
